# plus

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  conanfile.txt  configure.docker.sh  configure.sh  main.cpp  plus.toml  premake5.lua  rustfmt.toml  vcpkg.json  ~vcpkg.json.temp
include/: cli.h  githandler.h  util.h
include/cppgit2/: diff.h
include/cppgit2/internal/: back.h
scripts/: init.bat  init.ps1
src/: cli.cpp  cli.rs  config.cpp  error.rs  file_control.cpp  git.cpp  githandler.cpp  lg2prelude.cpp  main.cpp  main.rs  util.cpp  utils.cpp
src/cppgit2/: annotated_commit.cpp  blame.cpp  blob.cpp  buffer.cpp  commit.cpp  config.cpp  diff.cpp  id_to_str.cpp  index.cpp  initializer.cpp  object.cpp  odb.cpp  odb_object.cpp  reference.cpp  remote.cpp  repo.cpp  revspec.cpp  revwalker.cpp  signature.cpp  status.cpp  submodule.cpp  tag.cpp  tree.cpp
src/include/: cli.h  config.h  control.h  data.h  file_control.h  git.h  githandler.h  lg2prelude.h  log.h  util.h  utils.h
src/include/plus/: diagnostics.hpp
tests/: test_config.cpp  test_utils.cpp
